--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/saneef/qgen#readme",
   "dependencies": {
     "chalk": "^1.1.3",
+    "globby": "^5.0.0",
     "handlebars": "^4.0.5",
     "meow": "^3.7.0",
     "mkdirp": "^0.5.1",
