--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "xo",
     "test": "npm run lint && npm run unit-test"
   },
-  "repository": "saneef/qgen",
+  "repository": "alarisprime/qgen",
   "keywords": [
     "cli",
     "generator",
@@ -20,9 +20,9 @@
   "author": "Saneef Ansari <hello@saneef.com> (https://saneef.com)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/saneef/qgen/issues"
+    "url": "https://github.com/alarisprime/qgen/issues"
   },
-  "homepage": "https://github.com/saneef/qgen#readme",
+  "homepage": "https://github.com/alarisprime/qgen#readme",
   "dependencies": {
     "chalk": "^1.1.3",
     "globby": "^5.0.0",
