refactor(qgen): moves out a couple of private member functions to separate helper module

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "globby": "^6.0.0",
     "handlebars": "^4.0.5",
     "inquirer": "^3.0.0",
+    "is-relative": "^0.2.1",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "nested-error-stacks": "^2.0.0",
