--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     }
   },
   "scripts": {
-    "build": "babel src/qgen.js -o ./dist/qgen.js",
+    "build": "babel src/ -d ./dist/",
     "watch:test": "npm-watch build-and-test",
     "unit-test": "ava",
     "lint": "xo",
