--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "handlebars": "^4.0.5",
     "inquirer": "^3.0.0",
     "is-relative": "^1.0.0",
-    "minimist": "^1.2.0",
+    "meow": "^3.7.0",
     "mkdirp": "^0.5.1",
     "nested-error-stacks": "^2.0.0",
     "pinkie-promise": "^2.0.1",
