--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ cache:
 notifications:
   email: false
 node_js:
-  - '8'
-  - '7'
-  - '6'
+  - 'node'
+  - 'lts/*'
 before_script:
   - npm prune
 after_success:
