--- a/package.json
+++ b/package.json
@@ -67,7 +67,10 @@
     "travis-deploy-once": "^5.0.0"
   },
   "xo": {
-    "esnext": true
+    "esnext": true,
+    "ignores": [
+      "test/fixtures/**"
+    ]
   },
   "ava": {
     "failWithoutAssertions": false
