--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ jobs:
   include:
     - stage: release
       node_js: lts/*
+      script: skip
       deploy:
         provider: script
         skip_cleanup: true
