--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "meow": "^5.0.0",
     "mkdirp": "^0.5.1",
     "nested-error-stacks": "^2.1.0",
-    "redent": "^3.0.0",
-    "trim-newlines": "^3.0.0"
+    "redent": "^3.0.0"
   },
   "devDependencies": {
     "assert-dir-equal": "^1.1.0",
